// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Excerpt Node Node builds component while selected with effect 1`] = `
<div>
  <div
    className="text-chunk obojobo-draft--chunks--excerpt pad is-selected is-body-style-type-filled-box is-top-edge-type-normal is-bottom-edge-type-normal is-width-medium is-font-sans is-line-height-type-moderate is-font-size-smaller is-showing-effect"
  >
    <blockquote />
  </div>
</div>
`;

exports[`Excerpt Node Node builds the expected component 1`] = `
<div>
  <div
    className="text-chunk obojobo-draft--chunks--excerpt pad is-not-selected is-body-style-type-filled-box is-top-edge-type-normal is-bottom-edge-type-normal is-width-medium is-font-sans is-line-height-type-moderate is-font-size-smaller is-not-showing-effect"
  >
    <blockquote />
  </div>
</div>
`;
